[gd_scene load_steps=9 format=2]

[ext_resource path="res://Tilesheets/images/colored_transparent_packed_492.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/Door.gd" type="Script" id=2]
[ext_resource path="res://Tilesheets/images/colored_transparent_packed_490.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11.2, 5.6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.4, 27.4 )

[sub_resource type="OccluderPolygon2D" id=4]
closed = false
cull_mode = 1
polygon = PoolVector2Array( -14, 0, -14, -13, -13, -13, -13, -14, 13, -14, 13, -13, 14, -13, 14, 0, -11, 0 )

[sub_resource type="Animation" id=5]
resource_name = "close_anim"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "open_anim"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1.23114, 4.28709 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 2.21914 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 1 ) ]
}

[node name="Door" type="StaticBody2D" groups=[
"Door",
]]
scale = Vector2( 1.25, 1.25 )
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( -7, -7 )
scale = Vector2( 1, 1 )
texture = ExtResource( 4 )
region_rect = Rect2( 154, 171, 14, 14 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -6, -7 )
scale = Vector2( 1, 1 )
texture = ExtResource( 4 )
offset = Vector2( 13, 0 )
flip_h = true
region_rect = Rect2( 154, 171, 14, 14 )

[node name="DoorCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -5.6 )
scale = Vector2( 1, 1 )
shape = SubResource( 6 )

[node name="DetectionArea" type="Area2D" parent="."]
scale = Vector2( 1, 1 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
position = Vector2( 0, -7 )
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 4 )

[node name="DoorSound" type="AudioStreamPlayer2D" parent="."]
scale = Vector2( 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close_anim = SubResource( 5 )
anims/open_anim = SubResource( 3 )

[node name="CloseTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
